--- a/app/views/create-event/tickets.html
+++ b/app/views/create-event/tickets.html
@@ -73,7 +73,7 @@
 					  <summary role="button" aria-controls="details-content-0" aria-expanded="false" style="margin-top:10px;"><span class="summary">How availability will be displayed</span></summary>
 					  <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true"  style="margin-top:0px; margin-bottom:30px; padding-bottom:10px;">
 						  <p>
-							  Overall event capacity won't be made public - but as soon as 10 or fewer tickets remain, a message will display on the webpage.
+							  Total number of tickets won't be displayed on your webpage. Once event capacity exceeds 80%, a limited availability message will appear.
 						  </p>
 					  </div>
 				  </details>
