--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -213,14 +213,11 @@ GOV.UK prototype kit
                   <p style="margin-top:50px;"><span class="heading-xlarge">0 / {{ data['attendee-reg-count'] }}</span> checked in</p>
 
                   <div style="margin-top: 30px; margin-bottom: 0px; margin-left: auto; width:235px;">
+                    <p><a href="#">Design and create badges</a></p>
                     <input type="submit" class="button-secondary" formaction="#" value="Download doorlist (PDF)">
-                    <br>
-                    <br>
-                    <input type="submit" class="button-secondary" formaction="#" value="Download badges (PDF)">
                   </div>
 
                 </div>
-
 
                 {% include "includes/checkin-list.html" %}
 
