--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -275,7 +275,7 @@
 		  <!--   BENEFITS   -->
 		  <div class="form-group {% if errorMissingEventBenefit %} form-group-error {% endif %}" style="margin-bottom:10px;" id="benefits-section" >
 			  <legend class="form-label-bold" style="margin-bottom:0px;">
-				  Why attend this event?
+				  Event outcomes
 				  <!-- <span class="form-hint" style="margin-bottom: 0px; margin-top:3px;">For example, Meet with buyers</span>  -->
 			  </legend>
 
@@ -324,7 +324,7 @@
 			  <p id="add-benefit-link-7"
 				 {% if showBenefitFour == true %} style="color: #006ea5; text-decoration: underline; cursor: pointer; margin-top:15px; margin-left:0px; display: none;"  {% else %}
 				 style="color: #006ea5; text-decoration: underline; cursor: pointer; margin-top:15px; margin-left:0px; display: block;"  {% endif %}
-				 onclick="showbenefit7()">Add a benefit</p>
+				 onclick="showbenefit7()">Add a outcome</p>
 
 			  <div id="benefit-section-7"  {% if showBenefitFour == true %} style="margin-top:10px;" {% else %} style="margin-top:10px; display: none" {% endif %}>
 				  <input type="text" class="form-control" id="benefit-input-3" name="benefit-input-3" value="{{ data['benefit-input-3'] }}" style="width: 70%; display:inline;">
@@ -333,7 +333,7 @@
 			  <p id="add-benefit-link-8"
 				 {% if showBenefitFive == false and showBenefitFour == true %} style="color: #006ea5; text-decoration: underline; cursor: pointer; margin-top:15px; margin-left:0px; display: block;"
 				 {% else %}	 style="color: #006ea5; text-decoration: underline; cursor: pointer; margin-top:15px; margin-left:0px; display: none;"  {% endif %}
-				 onclick="showbenefit8()">Add a benefit</p>
+				 onclick="showbenefit8()">Add a outcome</p>
 
 			  <div id="benefit-section-8"  {% if showBenefitFive == true %}  style="margin-top:10px; margin-bottom:10px;"  {% else %} style="margin-top:10px; margin-bottom:10px;  display: none"  {% endif %}>
 				  <input type="text" class="form-control" id="benefit-input-4" name="benefit-input-4" value="{{ data['benefit-input-4'] }}" style="width: 70%; display:inline;">
@@ -537,6 +537,10 @@
 			  <div>
 				  <label class="form-label-bold" for="event-description" style="float:left; margin-top:4px;">
 					  Further details and background
+
+					  <span class="form-hint" >
+						  Any wider information relevant to this event. For example, speaker profiles or market statistics and insights.</span>
+
 
 					  {% if errorMissingEventDescription %}
 						  <span class="error-message">
