fixing and updating go live page

--- a/app/views/create-event/go-live.html
+++ b/app/views/create-event/go-live.html
@@ -99,9 +99,29 @@
 
 		<div class="form-group" style=" margin-bottom:20px;">
 			<label class="form-label-bold" >
-				Do you want to add tracking URL links now
-				<span class="form-hint">Track the effectiveness of your marketing channels</span>
+				Do you want to create tracking links for this page?
+				<!--<span class="form-hint">Track the effectiveness of your marketing channels</span>-->
 			</label>
+
+			<details role="group" style="width:650px; margin-bottom:10px;">
+				<summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">How does this work?</span></summary>
+				<div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true"  style="margin-top:0px; margin-bottom:30px; padding-bottom:10px;">
+					<p>
+						You can use tracking links to identify where webpage traffic and event registrations are coming from.
+					</p>
+
+					<p>
+						This allows you to find out exactly which promotion channels are creating the most amount of webpage traffic and converting most effectively into event registrations.
+						For example, you can measure the precise number of registrations that originate from Twitter, by using that channel's unique link in your tweets.
+					</p>
+
+					<p>
+						Traffic and registrations originating from any of these links will appear in your performance dashboard.
+					</p>
+
+				</div>
+			</details>
+
 
 			<!-- {{ session.eventsLiveURLS[session.currentEventShowing][0].length }}  -->
 
