--- a/app/views/includes/great-header.html
+++ b/app/views/includes/great-header.html
@@ -48,29 +48,33 @@ main#content {max-width: 1200px}
 </style>
 
 {% if session.liveOrNot == "false" %}
-      <div style="background-color: #FFFFFF; border-bottom: 5px solid #000000; height:200px; padding-top:10px; padding-bottom:10px; display: flex;" >
 
-        <div style="margin-right:0px; margin-left:20px; margin-top:0px; float: left; width:200px;">
-          <p style="font-size:16px; margin-top:10px;" align="left"><a style="color:#000000; font-family: Arial,sans-serif;" href="/account#draft-events">Account home</a></p>
 
-          <p class="form-label-bold" style="font-size:18px; font-family: Arial,sans-serif; margin-top:56px;" align="left">
-            <span style="font-weight:700">Share draft</span><br>
-            www.great.gov.uk/event/mh43dz
+      <div style="background-color: #FFFFFF; border-bottom: 10px solid #000000; height:300px; padding-top:10px; padding-bottom:10px; " >
+
+        <div style="margin-right:0px; margin-left:20px; margin-top:0px; float: left;">
+          <p style="margin-top:40px;  margin-right:40px; font-size:36px; font-weight:700; font-family: Arial,sans-serif;">Saved as draft</p>
+
+          <p class="form-label-bold" style="font-size:18px; font-family: Arial,sans-serif; margin-top:30px;" align="left">
+                Share draft<br>
+                <span style="font-weight:400">www.great.gov.uk/event/mh43dz</span>
           </p>
+
+
+          <p style="font-size:16px; margin-top:10px;" align="left"><a style="font-family: Arial,sans-serif;" href="/account#draft-events">Account home</a></p>
+
+          <p>
+              <a class="button-secondary" style="font-family: Arial,sans-serif; padding: .526315em .789473em .263157em;  font-size: 1.2em;   line-height: 1.25;
+              " href="/create-event/go-live-now">Make event live</a>
+          </p>
+
         </div>
 
-        <div style="float:left; width:100%; margin-top:30px;">
-          <p style="margin:5px; margin-top:10px;  margin-right:40px; font-size:36px; font-weight:700; font-family: Arial,sans-serif;">Draft event</p>
-        </div>
 
 
         <form action="/create-event/go-live-now" method="get" class="form">
 
-          <div style="margin-left:20px; margin-right:30px; margin-top:10px; float: right;">
-            <input type="submit" class="button-grey" value="Make event live" style="margin-bottom:35px; width:170px;">
 
-            <input type="submit" class="button" value="Save draft" style="width:170px;"  formaction="/account#draft-events">
-          </div>
 
         </form>
 
