--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -189,7 +189,7 @@ GOV.UK prototype kit
                       <input type="submit" class="button-secondary" formaction="#" value="Download this data">
                     </div>
                     <div style="margin-top: 30px; margin-bottom: 0px; margin-left: auto;">
-                      <p><a href="#">Email registrants</a></p>
+                      <p><a href="#">Send email to list</a></p>
                       <p><a href="#">Register someone</a></p>
                     </div>
                 </div>
