--- a/app/views/includes/registered-people-list.html
+++ b/app/views/includes/registered-people-list.html
@@ -310,8 +310,8 @@
       <thead>
         <tr  style="border-bottom: 1px solid #bfc1c3;">
           <th scope="col" style="width:20%; padding-bottom:10px; padding-top: 0px;">First name</th>
-          <th scope="col" style="width:22%; padding-bottom:10px; padding-top: 0px;">Last name <span style="font-weight:400;">&nbsp;<a href="#">Sort</a></span></th>
-          <th class="col" style="width:30%; padding-bottom:10px; padding-top: 0px;">Company <span style="font-weight:400;">&nbsp;<a href="#">Sort</a></span></th>
+          <th scope="col" style="width:23%; padding-bottom:10px; padding-top: 0px;">Last name <span style="font-weight:400;">&nbsp;<a href="#">Order A to Z</a></span></th>
+          <th class="col" style="width:29%; padding-bottom:10px; padding-top: 0px;">Company <span style="font-weight:400;">&nbsp;<a href="#">Order A to Z</a></span></th>
           <th class="col" style="width:16%; padding-bottom:10px; padding-top: 0px;">Region</th>
           <th scope="col" style="width:12%; padding-bottom:10px; padding-top: 0px;">DIT record</th>
         </tr>
