--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -185,13 +185,18 @@ GOV.UK prototype kit
               <div class="tabs-panel-inner">
 
                 <div style="display: flex; justify-content: space-between;">
-                    <div style="margin-top: 30px; margin-bottom: 0px;">
-                      <input type="submit" class="button-secondary" formaction="#" value="Download this data">
+
+                    <div style="margin-top: 30px; margin-bottom: 0px; width:250px;">
+                      <input type="submit" class="button-secondary" formaction="#" style="margin-bottom:20px" value="Download this data">
+                      <input type="submit" class="button-secondary" formaction="#" style="margin-bottom:20px"  value="Download doorlist (PDF)">
+                      <p><a href="#">Design and create badges</a></p>
                     </div>
+
                     <div style="margin-top: 30px; margin-bottom: 0px; margin-left: auto;">
                       <p><a href="#">Send email to list</a></p>
                       <p><a href="#">Register someone</a></p>
                     </div>
+
                 </div>
 
 
