--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -92,6 +92,7 @@ Best wishes,
 
 		  <div class="form-group" style="margin-top:10px">
 			  <input type="submit" class="button" value="Save and continue">
+			  <p style="margin-top:25px"><a href="/create-event/template-reg-onwards">I'll complete this later - I don't have this information yet</a></p>
 		  </div>
 
 	  </form>
