fixes for testing

--- a/app/views/create-event/title.html
+++ b/app/views/create-event/title.html
@@ -357,7 +357,7 @@
 			  <label class="form-label-bold" for="summary-target-audience" >
 				  Event eligibility criteria
 
-				  <span class="form-hint" style="margin-bottom: 5px; margin-top:3px;">For example, This event is for North west-based SMEs interested in exporting to Germany.</span>
+				  <span class="form-hint" style="margin-bottom: 5px; margin-top:3px;">For example: This event is for North west-based SMEs interested in exporting to Germany.</span>
 
 				  {% if emptyTargetAudienceText %}
 					  <span class="error-message">
