--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -367,14 +367,14 @@
 
 						  <div class="form-date " style="margin-top:5px">
 							  <div class="multiple-choice">
-								  <input id="agenda-no" type="radio" name="radio-agenda" value="no"
-										 {% if agendaNoSelected %} checked="checked" {% endif %} >
-								  <label for="agenda-no">No</label>
-							  </div>
-							  <div class="multiple-choice">
 								  <input id="agenda-later" type="radio" name="radio-agenda" value="yes"
 										 {% if agendaLaterSelected %} checked="checked" {% endif %} >
 								  <label for="agenda-yes">Not yet - I'll add one later</label>
+							  </div>
+							  <div class="multiple-choice">
+								  <input id="agenda-no" type="radio" name="radio-agenda" value="no"
+										 {% if agendaNoSelected %} checked="checked" {% endif %} >
+								  <label for="agenda-no">No</label>
 							  </div>
 							  <div class="multiple-choice" data-target="show-answers">
 								  <input id="agenda-yes" type="radio" name="radio-agenda" value="yes"
@@ -567,7 +567,7 @@
 
 		  <div class="form-group" style="margin-top:50px">
 			  <input type="submit" class="button" value="Save and continue">
-			  <p style="margin-top:25px"><a href="/create-event/date">I'll complete this later - I don't have this information yet</a></p>
+			  <p style="margin-top:25px"><a href="/create-event/images">I'll complete this later - I don't have this information yet</a></p>
 		  </div>
 
 	  </form>
