--- a/app/views/create-event/images.html
+++ b/app/views/create-event/images.html
@@ -86,7 +86,7 @@
 									   style="margin-top:10px;"><span class="summary">Image guidance</span></summary>
 							  <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true"  style="margin-top:0px; margin-bottom:30px; padding-bottom:10px;">
 								  <p>  <!-- note these are made up -->
-									  Required image resolution:<br>1000px by 300px
+									  Recommend image resolution:<br>300px by 200px
 								  </p>
 
 								  <p>  <!-- note these are made up -->
