--- a/app/views/create-event/organiser.html
+++ b/app/views/create-event/organiser.html
@@ -136,7 +136,7 @@
 
 		  <div class="form-group" style="margin-top:10px">
 			  <input type="submit" class="button" value="Save and continue">
-			  <p style="margin-top:25px"><a href="/create-event/title">I'll complete this later - I don't have this information yet</a></p>
+			  <p style="margin-top:25px"><a href="/create-event/date">I'll complete this later - I don't have this information yet</a></p>
 		  </div>
 
 	  </form>
