--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -62,7 +62,7 @@
 
 
 			  <div class="form-group">
-				  <label class="form-label-bold" for="venue"  style="margin-bottom:5px;  ">Venue</label>
+				  <label class="form-label-bold" for="venue"  style="margin-bottom:5px;  ">Venue name</label>
 				  {% if errorBuilding %}
 						  <span class="error-message">
 							  Enter venue name
