--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,9 @@
       <h2 class="heading-medium">September 2017</h2>
 
       <ul>
-        <li><a href="/scenario-1">Scenario one</a></li>
+        <li><a href="/scenario-empty">Scenario one</a></li>
+        <br/>
+        <li><a href="/scenario-1">Scenario two</a></li>
         <br/>
         <li><a href="/scenario-2">Generic</a></li>
         <br/>
