--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -62,7 +62,7 @@ GOV.UK prototype kit
                   <div style="float:left; width:33%; margin-top:0px;" display="flex">
                     <div style="margin-left:0px">
                       <p style="margin-bottom:0px"><span class="heading-large">{{data['attendee-quantity']}}</span> ticket capacity</p>
-                      <p style="margin-top:0px"><a href="/create-event/tickets">Change event capacity</a></p>
+                      <p style="margin-top:0px"><a href="/create-event/change-attendees-monitoring">Change event capacity</a></p>
                     </div>
                   </div>
                   <div style="float:right; width:28%;  margin-top:0px;">
