--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -214,7 +214,7 @@
 
 			  <div>
 				  <dt class="cya-question">
-					  Attendee benefits
+					  Event outcomes
 				  </dt>
 				  <dd class="cya-answer"     style="white-space: pre-wrap;">{{ data['benefits'] }}</dd>
 				  <dd class="cya-change">
@@ -253,7 +253,7 @@
 
 			  <div>
 				  <dt class="cya-question">
-					  Further event details
+					  Further details and background
 				  </dt>
 				  <dd class="cya-answer"   style="white-space: pre-wrap;">{{ data['event-description'] }}</dd>
 				  <dd class="cya-change">
