fix to broken title

--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -367,9 +367,9 @@
 
 						  <div class="form-date " style="margin-top:5px">
 							  <div class="multiple-choice">
-								  <input id="agenda-later" type="radio" name="radio-agenda" value="yes"
+								  <input id="agenda-later" type="radio" name="radio-agenda" value="later"
 										 {% if agendaLaterSelected %} checked="checked" {% endif %} >
-								  <label for="agenda-yes">Not yet - I'll add one later</label>
+								  <label for="agenda-later">Not yet - I'll add one later</label>
 							  </div>
 							  <div class="multiple-choice">
 								  <input id="agenda-no" type="radio" name="radio-agenda" value="no"
