--- a/app/views/create-event/title.html
+++ b/app/views/create-event/title.html
@@ -116,7 +116,7 @@
 			  </label>
 
 			  <input type="text" class="form-control  {% if errorMissingTitle %} form-control-error {% endif %}"
-					 id="summary-title" name="event-title" value="{{ data['event-title'] }}" style="width: 90%">
+					 id="summary-title" name="summary-title" value="{{ data['summary-title'] }}" style="width: 90%">
 
 		  </div>
 
