template fixes and also start page update

--- a/app/views/create-event/start-page.html
+++ b/app/views/create-event/start-page.html
@@ -31,7 +31,7 @@
 		<div style="display: flex; margin-right:0px;">
 
 			<div style="flex:1">
-				<p>This tool will allow you to publish a new event online, including: </p>
+				<p>This tool will allow you to create and publish: </p>
 
 				<ul class="list list-bullet">
 					<li>creation of your event webpage</li>
@@ -39,23 +39,24 @@
 					<li>setup and scheduling of your event emails</li>
 				</ul>
 
-				<p>Before you begin, it might be useful to familiarise yourself with the structure of the event webpage template. It’s been designed to help visitors quickly scan key details and decide if the event is relevant.</p>
+				<p>Before you begin, it might be useful to familiarise yourself with the structure of the webpage you’ll be populating.</p>
 
-				<p>The creator tool will guide you through the steps to populate each section of the page. </p>
+				<p>If you’re not yet ready to complete a particular section, that’s fine. Just select the ‘I’ll complete this later’ link at the bottom of each page.</p>
 
-				<p>If you don’t yet have content to populate a particular section, that’s fine. You can come back to it later. Just select the ‘I’ll complete this later’ link at the bottom of each page.</p>
+				<p>All unpublished events will be saved under the ‘Draft’ tab on your account homepage - so you can keep it as a work in progress until you’re ready to publish. </p>
 
-				<p>All your event drafts will be saved under the ‘Draft’ tab on your account homepage - allowing you to keep your page as a work in progress, until you’re ready to publish.
-				</p>
 
 				<div class="form-group" style="margin-top:20px">
-					<input type="submit" class="button" value="Continue">
+					<input type="submit" class="button" value="Create new event">
 				</div>
 			</div>
 
 
 			<div style="flex:1; margin-left:40px;">
 				<p class="bold" align="center" >Event webpage template</p>
+				<p align="center" >The event webpage template has been designed to help visitors quickly scan key details and decide if the event is relevant.</p>
+
+				<p align="center"> <a href="/create-event/example-event-image" target="_blank" >View full-size example</a> (opens in new tab)</p>
 
 				<img src="/public/images/event-template-image.png" style="width:455px;height:728px;">
 			</div>
