--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -36,7 +36,7 @@
 
 		  <div id="email-reg-subject-section" class="form-group panel panel-border-narrow" >
 			  <input type="text" class="form-control  {% if errorMissingTitle %} form-control-error {% endif %}"
-					 id="event-title" name="event-title" value="Your event booking - {{data['event-title']}}" style="width: 80%">
+					 id="event-email-reg-subject" name="event-email-reg-subject" value="Your event booking - {{data['event-title']}}" style="width: 80%">
 		  </div>
 
 
