--- a/app/views/create-event/template-reminder.html
+++ b/app/views/create-event/template-reminder.html
@@ -76,7 +76,7 @@ GOV.UK prototype kit
 
 				<div id="email-reg-subject-section" class="form-group panel panel-border-narrow" >
 					<input type="text" class="form-control  {% if errorMissingTitle %} form-control-error {% endif %}"
-						   id="event-title" name="event-title" value="Reminder of your upcoming event" style="width: 80%">
+						   id="event-email-subject" name="event-email-subject" value="Reminder of your upcoming event" style="width: 80%">
 				</div>
 
 
