start page update v3

--- a/app/views/create-event/start-page.html
+++ b/app/views/create-event/start-page.html
@@ -54,7 +54,7 @@
 
 			<div style="flex:1; margin-left:40px;">
 				<p class="bold" align="center" >Event webpage template</p>
-				<p align="center" >The event webpage template has been designed to help visitors quickly scan key details and decide if the event is relevant.</p>
+				<!-- <p align="center" >The event webpage template has been designed to help visitors quickly scan key details and decide if the event is relevant.</p> -->
 
 				<p align="center"> <a href="/create-event/example-event-image" target="_blank" >View full-size example</a> (opens in new tab)</p>
 
