fix to failed update to startpage content

--- a/app/views/create-event/start-page.html
+++ b/app/views/create-event/start-page.html
@@ -34,9 +34,9 @@
 				<p>This tool will allow you to create and publish: </p>
 
 				<ul class="list list-bullet">
-					<li>creation of your event webpage</li>
-					<li>design of your event registration form</li>
-					<li>setup and scheduling of your event emails</li>
+					<li>a new event webpage</li>
+					<li>an event registration form</li>
+					<li>the event’s confirmation and reminder emails</li>
 				</ul>
 
 				<p>Before you begin, it might be useful to familiarise yourself with the structure of the webpage you’ll be populating.</p>
