--- a/app/views/create-event/title.html
+++ b/app/views/create-event/title.html
@@ -112,7 +112,7 @@
 
 			  <label class="form-label-bold" for="event-title">
 				  Event summary (optional)
-				  <span class="form-hint" style="margin-bottom: 5px; margin-top:3px;">For example: For North west-based SMEs interested in exporting to Germany.</span>
+				  <span class="form-hint" style="margin-bottom: 5px; margin-top:3px;">For example: An afternoon of educational talks designed to help small businesses export.</span>
 			  </label>
 
 			  <input type="text" class="form-control  {% if errorMissingTitle %} form-control-error {% endif %}"
